  * checks/changelog-file.{desc,pm}:
    + [BR] Correct a typo on tag name and do not raise
      bad-intended-distribution if distribution is still
      set to UNRELEASED.  (Closes: #765344).
  * checks/control-file.{desc,pm}:
    + [BR] Apply patch from Johannes Schauer in order
      to detect obsolete XS-Testsuite header.
      (Closes: #770068).
  * checks/cruft.{desc,pm}:
    + [NT] Import "d/pycompat is deprecated" check from
      lintian4python.
  * checks/deb-format.{desc,pm}:
    + [BR] Support all format described in deb(5)
      but manually reject until dak is ready.
  * checks/dbus.{desc,pm}:
    + [NT] Apply patch series from Simon McVittie to
      improve the dbus check.  In particular, detect dbus
      policy files that exposes CVE-2014-8148 and
      CVE-2014-8156.  (Closes: #776480)
  * checks/fields.{desc,pm}:
    + [BR] Add reference to build-depends-on-metapackage
      (Closes: #767107).
    + [BR] Check source version (Closes: #749103).
    + [NT] Import check of "Python-version: current" being
      deprecated from lintian4python.
  * checks/files.{desc,pm}:
    + [BR] Rename compressed-objects.inv to
      file-should-not-be-compressed and use it for doxygen
      map.gz.  (Closes: #751949).
  * checks/init.d.desc:
    + [BR] Add reference to #DEBHELPER# token for
      script-in-etc-init.d-not-registered-via-update-rc.d.
      (Closes: #775467).
  * checks/patch-systems.pm:
    + [NT] Avoid crashing on debian/patches being a file.
      (Closes: #778556)
  * checks/po-debconf.pm:
    + [NT] Avoid errors from intltool-update.
      (Closes: #778558)
  * checks/script.{desc,pm}:
    + [BR] Fix some false negatives for
      command-with-path-in-maintainer-script tag.
      (Closes: #769845).
  * checks/source-copyright.{desc,pm}:
    + [BR] Fix a false positive for
      missing-license-paragraph-in-dep5-copyright tag.
      Do not allow to reference header paragraph,
      emit a specific tag.
      (Closes: #766118).