@@ -241,3 +241,11 @@ Certainty: possible
 Info: The restriction formula in Build-Profiles field includes an unknown build
  profile. The only allowed build profiles are "stage1", "stage2", "nocheck",
  "nodoc", "nobiarch" and "cross".
+
+Tag: multiline-architecture-field
+Severity: important
+Certainty: certain
+Ref: policy 5.6.8
+Info: The values of the Architecture field in debian/control must not
+ be separated by anything else than spaces, i.e. must be single line
+ and is not allowed to spawn multiple lines.
